<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <TextView
        android:id="@+id/HenkanView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/HenkanView"
        android:fontFamily="@font/bigfish_font"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/SignupView"
        />

    <TextView
        android:id="@+id/SignupView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/SignupView"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HenkanView" />

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:hint="@string/EnterUsername"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignupView" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/EnterEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newUsername"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/EnterPassword"
        android:textColor="#000000"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newEmail"
        app:layout_constraintBottom_toTopOf="@id/newPassword2"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/newPassword2"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPassword"
        app:layout_constraintBottom_toTopOf="@id/signupSubmit"
        android:hint="@string/ConfirmPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/signupSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:onClick="validateUser"
        app:layout_constraintTop_toBottomOf="@id/newPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/backButton" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Back"
        android:onClick="loginPage"
        app:layout_constraintEnd_toStartOf="@id/signupSubmit"
        app:layout_constraintTop_toBottomOf="@id/newPassword2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
