<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".homepage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/rootScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scrollContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/HeaderView"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:background="#e5e5e5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/sidebar"
                    android:scaleType="fitXY"
                    android:src="@drawable/sidebar_icon"
                    android:onClick="showSidebar"
                    app:layout_constraintEnd_toStartOf="@id/LogoHenkan"
                    app:layout_constraintStart_toStartOf="@id/HeaderView"
                    app:layout_constraintTop_toTopOf="@id/HeaderView" />

                <ImageView
                    android:id="@+id/LogoHenkan"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="LOGO"
                    android:src="@drawable/henkanlogo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/HeaderView"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/SearchBar"
                    android:layout_width="220dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints="Search Store"
                    android:hint="@string/HenkanUrl"
                    android:inputType="text"
                    app:layout_constraintStart_toEndOf="@id/LogoHenkan"
                    app:layout_constraintTop_toTopOf="@id/HeaderView" />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/submit"
                    android:src="@drawable/search_icon"
                    app:layout_constraintEnd_toEndOf="@id/SearchBar"
                    app:layout_constraintTop_toTopOf="@id/HeaderView" />

                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="logout"
                    android:text="Logout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:visibility="gone" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/sidebar_container"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="80dp"
        android:layout_marginStart="-300dp"
        android:orientation="horizontal"
        android:background="@android:color/black">

        <TextView
            android:id="@+id/LoginOption"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/LoginView"
            android:layout_marginTop="40dp"
            android:onClick="loginPage"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>